# fastapi-with-lpg

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PULL_REQUEST_BODY.md  README.md  docker-compose.yml  pyproject.toml
.github/: COMMUNITY_STANDARD_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py  metrics.py
app/middleware/: correlation.py  logging.py  metrics.py
app/services/: example.py
monitoring/grafana/provisioning/dashboards/: dashboards.yml  fastapi-overview.json
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
